Fix height on mobile devices

--- a/src/App/src/styles.scss
+++ b/src/App/src/styles.scss
@@ -1,17 +1,21 @@
+@import "../node_modules/bulma/bulma.sass";
+
 html,
 body {
-  height: 100vh;
+  height: 100%;
+  overflow: hidden;
+  overflow: clip;
 }
 
-html {
-  font-size: calc(9.32px + 1vw);
-  box-sizing: border-box;
+// html {
+//   font-size: calc(9.32px + 1vw);
+//   box-sizing: border-box;
 
-  @media (min-width: 768px) {
-    font-size: 17px;
-  }
-}
+//   @media (min-width: 768px) {
+//     font-size: 17px;
+//   }
+// }
 
-body {
-  margin: 0;
-}
+// body {
+//   margin: 0;
+// }
